начал яндекс карту

--- a/layout.html
+++ b/layout.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
-        body,
-        ::placeholder {
+        body {
+            margin: 0;
             font-family: Geneva, Arial, Helvetica, sans-serif;
         }
 
@@ -16,4 +16,5 @@
 </head>
 <body>
 </body>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 </html>
