--- a/layout.html
+++ b/layout.html
@@ -12,6 +12,9 @@
         .hidden {
             display: none !important;
         }
+        .review__input {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
