--- a/layout.html
+++ b/layout.html
@@ -12,8 +12,14 @@
         .hidden {
             display: none !important;
         }
+        .review {
+            min-width: 250px;
+        }
         .review__input {
             margin-bottom: 10px;
+        }
+        input,textarea {
+            width: 90%;
         }
     </style>
 </head>
