поправил открытие кластера

--- a/layout.html
+++ b/layout.html
@@ -21,6 +21,9 @@
         input,textarea {
             width: 90%;
         }
+        .ymaps-2-1-79-b-cluster-tabs__menu {
+            display: none !important;
+        }
     </style>
 </head>
 <body>
