--- a/projects/chat/chat.html
+++ b/projects/chat/chat.html
@@ -2,13 +2,11 @@
     <div class="chat__left">
         <div class="chat__profile">
             <div class="chat__profile-userpic"></div>
-            <div class="chat__profile-name">Brexston</div>
+            <div class="chat__profile-name">Username</div>
         </div>
         <div class="chat__users">
             <div class="chat__users-title">Все пользователи:</div>
             <div class="chat__users-list">
-                <div class="chat__user">Brexston</div>
-                <div class="chat__user">smelykov</div>
             </div>
         </div>
     </div>
@@ -34,9 +32,23 @@
     </div>
 </div>
 
+<div class="chat-popup">
+  <div class="c-popup">
+    <div class="c-popup__icon"></div>
+    <div class="c-popup__title">Авторизация</div>
+    <div class="c-popup__description">Введите пожалуйста свой ник для дальнейшей авторизации</div>
+    <div class="c-popup__input">
+      <input type="text" placeholder="Введите свой ник">
+    </div>
+    <div class="c-popup__button">
+      <button>Войти</button>
+    </div>
+  </div>
+</div>
+
 
 <style>
-    body {
+body {
   margin: 0;
   color: white;
   overflow: hidden;
@@ -50,6 +62,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 300px 1fr;
+  transition: 0.3s;
 }
 
 .chat__left {
@@ -173,5 +186,106 @@
   line-height: 16px;
   font-size: 14px;
   color: #658FB7;
+}
+.popup-opened .chat-popup {
+  opacity: 1;
+  pointer-events: auto;
+}
+.popup-opened .chat {
+  filter: blur(15px)
+}
+
+.popup-opened .chat-popup .c-popup{
+  transform: none;
+}
+.chat-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.c-popup {
+  background: #17212B;
+  padding: 39px 77px 50px;
+  text-align: center;
+  max-width: 452px;
+  transform: scale(0.5);
+  transition: 0.3s;
+}
+.c-popup__icon {
+  width: 139px;
+  height: 139px;
+  border-radius: 50%;
+  background: #232F3D;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto 29px;
+}
+.c-popup__icon::after {
+  content: '';
+  display: block;
+  background-image: url('data:image/svg+xml,%0A%3Csvg width="85" height="65" viewBox="0 0 85 65" fill="none" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath fill-rule="evenodd" clip-rule="evenodd" d="M40 0C34.4772 0 30 4.47715 30 10V33C30 38.5228 34.4772 43 40 43H41V51L48.1111 43H75C80.5228 43 85 38.5228 85 33V10C85 4.47715 80.5228 0 75 0H40ZM78 7H37V36H78V7Z" fill="%235188C0"/%3E%3Cpath d="M32.2909 45.1119V53.8236H4.70908V32.2157H27V27H6.72727C3.0119 27 0 30.3359 0 34.451V51.5882C0 55.7033 3.0119 59.0392 6.72727 59.0392H24.8162L29.6 65V59.0392H30.2727C33.9881 59.0392 37 55.7033 37 51.5882V46.9231L32.2909 45.1119Z" fill="%235188C0"/%3E%3Cpath d="M68.6909 45V55.2242H49.3091V50.2797L46 51.3077V53.9555C46 56.2911 48.1165 58.1844 50.7273 58.1844H51.2V61.5676L54.5616 58.1844H67.2727C69.8835 58.1844 72 56.2911 72 53.9555V45H68.6909Z" fill="%235188C0"/%3E%3C/svg%3E ');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 85px;
+  height: 65px;
+}
+
+.c-popup__title {
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 500;
+  margin-bottom: 13px;
+}
+.c-popup__description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  color: #7F91A4;
+  max-width: 330px;
+  margin-bottom: 35px;
+}
+.c-popup__input {
+  margin-bottom: 42px;
+}
+.c-popup__input input {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 18px;
+  color: #858F98;
+  background: transparent;
+  border: 1px solid #858F98;
+  border-width: 0 0 1px 0;
+  padding-bottom: 13px;
+  width: 100%;
+  
+}
+.c-popup__input input:focus-visible {
+  outline: 0;
+}
+.c-popup__button button {
+  background: #5387C1;
+  border-radius: 5px;
+  line-height: 17px;
+  font-size: 15px;
+  font-weight: 500;
+  color: #fff;
+  height: 43px;
+  padding: 0 21px;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  text-transform: uppercase;
+  width: 100%;
+  max-width: 132px;
 }
 </style>
